changed the failed transactions
